# betting-platform-2025

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION-SPEC.md  analysis.md  docker-compose.podman.yml  docker-compose.yml  futuristic-sports-betting-ui-report.md  package-lock.json  predict-current-snapshot.md  sports-betting-ux-report.md
.kilo/: kilo.json
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_matchstat_fields_and_strategies.py  003_add_prediction_links_to_ticket_legs.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: analytics.py  auth.py  bankroll.py  catalog.py  dashboard.py  data.py  jobs.py  live.py  matches.py  predictions.py  router.py  strategies.py  tickets.py
backend/app/models/: __init__.py  bankroll.py  job.py  match.py  prediction.py  scrape.py  strategy.py  ticket.py  todo.py  user.py
backend/app/schemas/: analytics.py  auth.py  bankroll.py  catalog.py  dashboard.py  data.py  job.py  match.py  prediction.py  strategy.py  ticket.py  todo.py
backend/app/services/: auth.py  ensemble.py  prediction_engine.py  python_bridge.py  scraper.py  ticket_engine.py
backend/tests/: test_api_contracts.py  test_phase4_model_attribution.py  test_prediction_run_semantics.py  test_scrape_job_semantics.py  test_ticket_creation_validation.py
frontend/: .gitignore  Dockerfile  package.json  playwright.config.ts  pnpm-lock.yaml  research-betting-layouts.md  research-dashboard-features.md  tsconfig.json  (+4 more)
(+172 files in other folders)
